--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,13 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+    path: /inicio
+    controller: App\Controller\SerieController::index
+
+buscar:
+    path: /buscar/{nombre}/{creador}
+    controller: App\Controller\SerieController::buscar
+    defaults: { nombre: 'desconocido', creador: 'vacio'}
+    methods: [GET]
+
+mostrar:
+    path: /mostrar
+    controller: App\Controller\SerieController::mostrar
