--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -28,3 +28,7 @@ formulario_ver:
 formulario_actualizar:
     path: /formulario/actualizar/{id}
     controller: App\Controller\SeriesController::actualizar
+
+formulario_eliminar:
+    path: /formulario/eliminar/{id}
+    controller: App\Controller\SeriesController::eliminar
